
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int string ;


 int replace_all (int ,char*,char*) ;
 int replace_with_rand (int ,char*,int) ;

string build_packet(string _packet, char *addr, char *host)
{
       string packet = _packet;
       replace_all(packet, "[FROMADDR]", addr);
       replace_all(packet, "[TOADDR]", host);
       replace_all(packet, "[DOMAIN]", "www.nosec.org");
       replace_all(packet, "[FROMUSER]", "siprint");
       replace_with_rand(packet, "[CSEQ]", 9);
       replace_with_rand(packet, "[CALLID]", 9);
       replace_with_rand(packet, "[TAG]", 9);
       replace_with_rand(packet, "[BRANCH]", 9);
       return packet;
}
