; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_4281.c_build_packet.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_4281.c_build_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"[FROMADDR]\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"[TOADDR]\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"[DOMAIN]\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"www.nosec.org\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"[FROMUSER]\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"siprint\00", align 1
@.str.6 = private unnamed_addr constant [7 x i8] c"[CSEQ]\00", align 1
@.str.7 = private unnamed_addr constant [9 x i8] c"[CALLID]\00", align 1
@.str.8 = private unnamed_addr constant [6 x i8] c"[TAG]\00", align 1
@.str.9 = private unnamed_addr constant [9 x i8] c"[BRANCH]\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @build_packet(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* %4, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @replace_all(i32 %9, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %10)
  %12 = load i32, i32* %7, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @replace_all(i32 %12, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %13)
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @replace_all(i32 %15, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @replace_all(i32 %17, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0))
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @replace_with_rand(i32 %19, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0), i32 9)
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @replace_with_rand(i32 %21, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.7, i64 0, i64 0), i32 9)
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @replace_with_rand(i32 %23, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.8, i64 0, i64 0), i32 9)
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @replace_with_rand(i32 %25, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.9, i64 0, i64 0), i32 9)
  %27 = load i32, i32* %7, align 4
  ret i32 %27
}

declare dso_local i32 @replace_all(i32, i8*, i8*) #1

declare dso_local i32 @replace_with_rand(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
